cloud/experiments/pydio/mysql.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mysql
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mysql
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: mysql
    spec:
      containers:
      - name: mysql
        image: docker.io/mysql:8
        args:
          - --character-set-server=utf8mb4
          - --collation-server=utf8mb4_unicode_ci
        ports:
        - containerPort: 3306
        securityContext:
          runAsUser: 1000
      volumes:
      - name: data
        persistentVolumeClaim:
          claimName: mysql-data
---
apiVersion: v1
kind: Service
metadata:
  name: mysql
spec:
  selector:
    app: mysql
  ports:
  - name: mysql
    protocol: TCP
    port: 3306
    targetPort: 3306
