cloud/experiments/pydio/pydio.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pydio
  namespace: seafile
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pydio
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: pydio
    spec:
      containers:
      - name: pydio
        image: docker.io/pydio/cells:4.1
        ports:
        - name: web-ui
          containerPort: 8080
        # - name: web-ui-2
        #   containerPort: 8000
        # - name: web-ui-3
        #   containerPort: 8082
        volumeMounts:
        - name: conf
          mountPath: /pydio/config/install.yaml
          subPath: pydio-conf.yaml
        - name: data
          mountPath: /var/cells
        # securityContext:
        #   runAsUser: 1000
      volumes:
      - name: data
        persistentVolumeClaim:
          claimName: pydio-data
      - name: conf
        configMap:
          name: pydio-conf
---
apiVersion: v1
kind: Service
metadata:
  name: pydio
  namespace: seafile
spec:
  selector:
    app: pydio
  ports:
  - name: web-ui
    protocol: TCP
    port: 80
    targetPort: 8080
  # - name: web-ui-2
  #   protocol: TCP
  #   port: 8000
  #   targetPort: 8000
  # - name: web-ui-3
  #   protocol: TCP
  #   port: 8082
  #   targetPort: 8082
