cloud/experiments/pydio/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pydio
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-staging
    nginx.ingress.kubernetes.io/whitelist-source-range: 10.0.0.0/16,1.2.3.4,1.2.3.4
    nginx.ingress.kubernetes.io/proxy-body-size: 8m
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - pydio-local.example.duckdns.org
    secretName: pydio-local.example.duckdns.org-secret-staging
  rules:
  - host: pydio-local.example.duckdns.org
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: pydio
            port:
              number: 80
